force-app/main/default/objects/cogn__Cognism_Campaign__c/cogn__Cognism_Campaign__c.object-meta.xml
<CustomObject>
    <label>Cognism Campaign</label>
    <nameField>
        <label>Cognism Campaign Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cognism Campaigns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>