force-app/main/default/objects/cogn__Cognism_Campaign__c/fields/cogn__Account__c.field-meta.xml
<CustomField>
    <fullName>cogn__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cognism Campaigns</relationshipLabel>
    <relationshipName>Cognism_Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>