force-app/main/default/objects/cogn__Cognism_Campaign__c/fields/cogn__API_Version__c.field-meta.xml
<CustomField>
    <fullName>cogn__API_Version__c</fullName>
    <label>API Version</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Old</fullName>
                <default>true</default>
                <label>Old</label>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>