force-app/main/default/objects/cogn__Cognism_Campaign__c/fields/cogn__Created_From_Account_Widget__c.field-meta.xml
<CustomField>
    <fullName>cogn__Created_From_Account_Widget__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created From Account Widget</label>
    <type>Checkbox</type>
</CustomField>