force-app/main/default/objects/cogn__Cognism_Campaign__c/fields/cogn__First_After_Save__c.field-meta.xml
<CustomField>
    <fullName>cogn__First_After_Save__c</fullName>
    <defaultValue>false</defaultValue>
    <label>First After Save</label>
    <type>Checkbox</type>
</CustomField>