force-app/main/default/objects/cogn__Cognism_Campaign__c/fields/cogn__Object_Type__c.field-meta.xml
<CustomField>
    <fullName>cogn__Object_Type__c</fullName>
    <label>Object Type</label>
    <length>25</length>
    <type>Text</type>
</CustomField>