force-app/main/default/objects/cogn__Cognism_Campaign__c/fields/cogn__Params__c.field-meta.xml
<CustomField>
    <fullName>cogn__Params__c</fullName>
    <label>Params</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>