force-app/main/default/objects/cogn__Cognism_Campaign__c/fields/cogn__Search_Parameters__c.field-meta.xml
<CustomField>
    <fullName>cogn__Search_Parameters__c</fullName>
    <label>Search Parameters</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>