force-app/main/default/objects/cogn__Cognism_Campaign__c/fields/cogn__Selected_Statuses__c.field-meta.xml
<CustomField>
    <fullName>cogn__Selected_Statuses__c</fullName>
    <label>Selected Statuses</label>
    <length>255</length>
    <type>Text</type>
</CustomField>