force-app/main/default/objects/cogn__Cognism_Campaign__c/fields/cogn__Send_to_Cognism_By__c.field-meta.xml
<CustomField>
    <fullName>cogn__Send_to_Cognism_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Send to Cognism By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cognism_Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>