force-app/main/default/objects/cogn__Cognism_Campaign__c/fields/cogn__Send_to_Cognism_Date__c.field-meta.xml
<CustomField>
    <fullName>cogn__Send_to_Cognism_Date__c</fullName>
    <label>Send to Cognism Date</label>
    <type>DateTime</type>
</CustomField>