force-app/main/default/objects/cogn__Cognism_Campaign__c/fields/cogn__Total_Records__c.field-meta.xml
<CustomField>
    <fullName>cogn__Total_Records__c</fullName>
    <label>Total Records</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>