force-app/main/default/objects/cogn__Cognism_Campaign__c/listViews/cogn__All.listView-meta.xml
<ListView>
    <fullName>cogn__All</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>All</label>
</ListView>