force-app/main/default/objects/cogn__Cognism_Campaign__c/listViews/cogn__All1.listView-meta.xml
<ListView>
    <fullName>cogn__All1</fullName>
    <columns>NAME</columns>
    <columns>cogn__Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>